--- a/date/2024-11/index.htm
+++ b/date/2024-11/index.htm
@@ -89,6 +89,23 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
+                                        <div class="row xcblog-blog-item" data-date="2024-11-14">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2024-11-14-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/830880c859159c166b79b0f24c26ce86.webp" alt="11月14日更新20.2M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2024-11-14-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">11月14日更新20.2M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了韩国、加拿大、日本、美国、香港、新加坡、欧洲等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                11月14日                            </p>
+                        </div>
+                    </div>
                                         <div class="row xcblog-blog-item" data-date="2024-11-13">
                         <div class="col-lg-4">
                             <div class="position-relative">
@@ -242,23 +259,6 @@
                                 11月5日                            </p>
                         </div>
                     </div>
-                                        <div class="row xcblog-blog-item" data-date="2024-11-04">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2024-11-4-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/5620e7c3d4d3be48971add45a3c753f0.webp" alt="11月4日更新20.8M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2024-11-4-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">11月4日更新20.8M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了美国、新加坡、韩国、欧洲、日本、加拿大、香港等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                11月4日                            </p>
-                        </div>
-                    </div>
                                     </div>
 
                 <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2024-11/page-2.htm">2</a></li> <li><a href="/date/2024-11/page-2.htm">&raquo;</a></li></ul>            </div>
@@ -268,8 +268,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-11-free-subscribe-node.htm">10月11日更新21.6M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了香港、加拿大、美国、日本、新加坡、欧洲、韩国等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-31-free-shadowrocket-node.htm">10月31日更新21.9M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、香港、加拿大、日本、韩国、美国、新加坡等地区,最高速度可达21.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -278,8 +278,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-2-21-node-share-links.htm">2月21日19.4M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、新加坡、香港、日本、欧洲、加拿大等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-2-17-free-node-subscribe.htm">2月17日18M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了香港、加拿大、新加坡、美国、韩国、欧洲、日本等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -288,8 +288,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-8-16-shadowrocket-node.htm">8月16日更新20.2M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、新加坡、韩国、香港、日本、欧洲、加拿大等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-9-7-free-clash.htm">9月7日更新23M/S，2024年最新高速Shadowrocket/V2ray/Clash/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、香港、日本、韩国、新加坡、加拿大、欧洲等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -298,8 +298,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-5-18-clash-v2ray-ss-ssr.htm">5月18日更新18.9M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、欧洲、加拿大、香港、韩国、美国、新加坡等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-8-4-free-node-subscribe-links.htm">8月4日更新20.2M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、美国、韩国、香港、欧洲、新加坡、加拿大等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -308,8 +308,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-4-1-free-ssr-node.htm">4月1日更新23M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、欧洲、香港、韩国、加拿大、日本、美国等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-5-13-free-subscribe-node.htm">5月13日更新21M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、欧洲、日本、加拿大、美国、香港、韩国等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -318,8 +318,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-5-14-free-v2ray.htm">5月14日更新18.7M/S，2024年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、新加坡、日本、韩国、美国、欧洲、香港等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-5-23-node-share-links.htm">5月23日更新19.4M/S，2024年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了香港、加拿大、韩国、欧洲、新加坡、日本、美国等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -328,8 +328,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-8-21-free-subscribe-node.htm">8月21日更新19M/S，2024年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、加拿大、韩国、香港、欧洲、新加坡、美国等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-9-30-free-node-subscribe.htm">9月30日更新21.6M/S，2024年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了韩国、欧洲、日本、香港、美国、加拿大、新加坡等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -338,8 +338,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-29-free-v2ray.htm">10月29日更新19.6M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、香港、加拿大、美国、日本、韩国、欧洲等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-6-27-clash-node.htm">6月27日更新19.3M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、韩国、加拿大、香港、新加坡、欧洲、日本等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -348,8 +348,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-7-19-free-node-subscribe.htm">7月19日更新19.9M/S，2024年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、新加坡、香港、韩国、欧洲、加拿大、日本等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-27-free-ssr-subscribe.htm">10月27日更新19.6M/S，2024年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、韩国、欧洲、香港、美国、新加坡、日本等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -358,8 +358,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-5-29-free-shadowrocket-node.htm">5月29日更新22M/S，2024年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、加拿大、韩国、欧洲、美国、日本、香港等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-4-8-clash-windows.htm">4月8日更新22.1M/S，2024年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、日本、加拿大、美国、韩国、香港、新加坡等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -370,7 +370,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-08/" title="2024-08 归档">2024-08</a></h4>
